# Proyecto_IOT-AWS

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  README.txt  UsoAws.c  UsoAws.h  UsoWifi.c  UsoWifi.h  subscribe_publish_aws.c
main/certs/: certificate_pem_crt  e928efa5673e2fee3fad45db8afc63a60fbbe9beed5a897dff446addc9eb2c8e-public.pem.key  private_pem_key
